--- a/FinalProject/appsettings.json
+++ b/FinalProject/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConStr": "Data Source=BRAYLIN;Initial Catalog=Tribunal;Integrated Security=True;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
