--- a/FinalProject.Client/FinalProject.Client.csproj
+++ b/FinalProject.Client/FinalProject.Client.csproj
@@ -10,10 +10,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.3" />
+    <PackageReference Include="Radzen.Blazor" Version="4.28.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="NewFolder\" />
+    <ProjectReference Include="..\Shared1\Shared1.csproj" />
   </ItemGroup>
 
 </Project>
