--- a/FinalProject.Client/FinalProject.Client.csproj
+++ b/FinalProject.Client/FinalProject.Client.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.Bootstrap" Version="1.10.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.3" />
     <PackageReference Include="Radzen.Blazor" Version="4.28.5" />
   </ItemGroup>
