--- a/FinalProject.Client/FinalProject.Client.csproj
+++ b/FinalProject.Client/FinalProject.Client.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.3" />
+    <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
     <PackageReference Include="Radzen.Blazor" Version="4.28.5" />
   </ItemGroup>
 
